tweaking the med and low paddle center settings. fixing the elastic bounce on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@ body{
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
                                   
 }
+html {
+  position: fixed; /* iOS Safari */
+}
 #Stage {
     display: block;
     margin: 0 auto;
